Иерархия файлов в проекте Изменено расположение ресурсных файлов

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 # Расположение файлов библиотеки
 FILE(GLOB_RECURSE INCLUDES ${GAME_SOURCE}/*.h)
 FILE(GLOB_RECURSE SOURCES ${GAME_SOURCE}/*.cpp)
-
-#message("GAME INCLUDES: " ${INCLUDES})
-#message("GAME SOURCES: " ${SOURCES})
+source_group(TREE ${GAME_SOURCE} TREE PREFIX "" FILES ${INCLUDES} ${SOURCES})
 
 # Расположение заголовочных файлов
 include_directories(${ENGINE_SOURCE})
