--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ include_directories(${ENGINE_SOURCE})
 include_directories(${GLM_INCLUDES})
 include_directories(${JSONCPP_INCLUDES})
 include_directories(${GLFW_INCLUDES})
+include_directories(${FREEIMAGE_INCLUDES})
+include_directories(${PHYSX_INCLUDES})
+include_directories(${PHYSX_INCLUDES_PXSHARED})
 
 # Создание статической библиотеки
 add_library(${GAME_NAME} STATIC ${INCLUDES} ${SOURCES})
