Подмодуль freetype2 git://git.sv.nongnu.org/freetype/freetype2.git

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(${GLFW_INCLUDES})
 include_directories(${FREEIMAGE_INCLUDES})
 include_directories(${PHYSX_INCLUDES})
 include_directories(${PHYSX_INCLUDES_PXSHARED})
+include_directories(${FREETYPE2_INCLUDES})
 
 # Создание статической библиотеки
 add_library(${GAME_NAME} STATIC ${INCLUDES} ${SOURCES})
